Fix a spacing issue on the list view
Short text blocks would occupy more space than they should, creating a
strange layout.

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1663,10 +1663,6 @@ a.close-btn span {
   text-decoration: none;
 }
 
-.place-items .place-item {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
 .place-items ul {
   margin: 0;
 }
