--- a/src/sa_web/static/scss/_content.scss
+++ b/src/sa_web/static/scss/_content.scss
@@ -148,11 +148,6 @@ a.close-btn {
 }
 
 .place-items {
-    .place-item {
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-
     ul {
         margin: 0;
     }
